add lobby example

--- a/src/app/examples/examples.component.html
+++ b/src/app/examples/examples.component.html
@@ -25,7 +25,11 @@
         <mat-icon class="status status--supported">check_circle</mat-icon>
         Spectator
       </a>
-
+      <h3 matSubheader>Lobby</h3>
+      <a mat-list-item routerLink="lobby">
+        <mat-icon class="status status--supported">check_circle</mat-icon>
+        Select Game
+      </a>
       <h3 matSubheader>Chess</h3>
       <a mat-list-item routerLink="chess/singleplayer">
         <mat-icon class="status status--unsupported">remove_circle</mat-icon>
