small examples nav fixes

--- a/src/app/examples/examples.component.html
+++ b/src/app/examples/examples.component.html
@@ -62,10 +62,9 @@
         <mat-icon class="status status--supported">check_circle</mat-icon>
         Liar's Dice</a>
     </mat-nav-list>
-
   </mat-sidenav>
   <mat-sidenav-content style="height: 100vh;">
-    <mat-toolbar>
+    <mat-toolbar color="primary">
       <button
         type="button"
         aria-label="Toggle sidenav"
