--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 body { margin: 0; }
+
+bio-debug .debug-ui {
+  z-index: 2;
+  opacity: 0.95;
+}
